...
                      color: Theme.of(context).cardColor,
                    ),
                    const SizedBox(
                      height: 50,
                    ),
                    CustomTextFiled(
                      key: const ValueKey('input.username'),
                      width: ResponsiveSize.isMobile(context)
                          ? ResponsiveSize.sizeWidth(context)
                          : 400,
                      controller: _usernameController,
                      // borderColor: AppTheme.secondaryColor,
                      hintText: "Enter Your github Username",
...
                          return 'Please write Something';
                        }
                      },
                    ),
                    const SizedBox(height: 30),
                    AppButton(
                      key: const ValueKey('button.check'),
                      width: ResponsiveSize.isMobile(context)
                          ? ResponsiveSize.sizeWidth(context)
                          : 400,
                      bgcolor: AppTheme.fillColor,
                      textColor: Theme.of(context).scaffoldBackgroundColor,
                      callback: () {
...
