...
              child: Align(
                alignment: Alignment.center,
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.center,
                  children: [
                    CardImage(
                      key: const ValueKey('image.user'),
                      imageUrl: user.imageUrl,
                      height: 120,
                      width: 120,
                      shape: BoxShape.circle,
                    ),
                    Padding(
...
